role based logic implemented (analytic service does not run)